fixed a bug to prevent display from overflowing screen

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ a:active button {
 .calc__screen {
 	background-color: rgba(223, 230, 233, 1);
 	color: rgba(47, 54, 64, 1);
-	font-size: 3rem;
+	font-size: 2.7rem;
 	font-weight: 400;
 	text-align: right;
 	width: 100%;
